Fixed invisible clicky image causing line breaks

--- a/style.css
+++ b/style.css
@@ -707,6 +707,10 @@ table {
 	width: auto;
 }
 
+#footer .clicky {
+	display: inline;
+}
+
 
 /* ---------------------------- */
 /* -----[ MISCELLANEOUS ] ----- */
